# MusicCat

./: CMakeLists.txt  README.md  main.cpp
include/: Mcat.cpp  Mcat.h
include/common/: Cmd.h  CommonsInit.h  Entity.h  FileManager.h  Listener.h  Logger.h  Path.h  Public.h  TypeParser.h
include/common/cache/: cache.txt
include/common/src/: Cmd.cpp  CommonsInit.cpp  Entity.cpp  FileManager.cpp  Listener.cpp  Logger.cpp  Path.cpp  TypeParser.cpp
include/core/: MyAppleMusic.h  MyFfmpeg.h  MySox.h
include/core/src/: MyAppleMusic.cpp  MyFfmpeg.cpp  MySox.cpp
logo/: Mcat_cli_logo.txt
output/: 4 Impromptus, D. 899 - No. 3 in G-Flat Major. Andante.flac
output/Mcat Library/A Moment in Time/: 4 Impromptus, D. 899 - No. 1 in C Minor. Allegro molto moderato.m4a  4 Impromptus, D. 899 - No. 2 in E-Flat Major. Allegro (1).m4a  4 Impromptus, D. 899 - No. 2 in E-Flat Major. Allegro.m4a
output/Mcat Library/A Moment in Time/flac/: 4 Impromptus, D. 899 - No. 1 in C Minor. Allegro molto moderato.flac  4 Impromptus, D. 899 - No. 2 in E-Flat Major. Allegro (1).flac  4 Impromptus, D. 899 - No. 2 in E-Flat Major. Allegro.flac
